# HSE-AMI

Algo/: solve.cpp
Algo/ht1/: plot.py
Algo/ht2/: 2_base.py  _base.py  base.py  plane10.py  plane_base.py  plate20.py
CAOS/: mail.c  main.c  parse_download_logout.py  report.tex
CAOS/evil/: download_all.py  findrunid.py
CAOS/ht01/: 1.S  2.S  3.S  4.S  5.S  _4.S  libvar.c  main.c  main1.c  main2.c  main4.cpp  main5.c  test.c  testlib.c
CAOS/kr01/: 1.c  2.c  3.c  4.c  5.c  main4.c
CAOS/kr02/: 1.c  2.c  3.c  4.c  5.c  main2.c  main4.c  main5.c
CAOS/kr03/: 1.S  2.S  3.S  4.S  main1.c  main2.c  main3.c  main4.c  main5.c  s5.S
CAOS/kr04/: 1.S  2.S  3.S  4.S  5.S  asmmain5.c  file_main5.c  main1.c  main2.c  main3.c  main4.c  main5.c
CAOS/kr05/: 1.c  2.c  3.c  4.c  5.c  main3.c
CAOS/kr06/: 1.c  2.c  3.c  4.c  5.c  bin_double.c
CAOS/kr07/: 1.c  2.c  3.c  5.c
CAOS/kr08/: 1.c  2.c  3.c  4.c  client4.c  kr08-3.c  petrov_kr08-4.c  (+1 more)
DBT/: kr1.sql
DM/: ht6.tex  hw5.tex  hw6.tex
HPC/hw4/: CMakeCache.txt  CMakeLists.txt  main.cpp  make_plots.py  run.sh
ML/: P2-sgd-and-linear-models.ipynb
ML1/: house_pricing.ipynb
NA/: HW1_Tokmakov.ipynb  HW2_Tokmakov.ipynb
PDC/: CMakeLists.txt  _kmeans.cpp  client.py  datagen.cpp  heat.c  kmeans.best.cpp  kmeans.cpp  kmeans.stable5.cpp  master.py  matmul.cu  mvmult.cpp  phils.cpp  phils_rotate.cpp  phils_tmp.cpp  worker.py  workitem.py
PDC/mpi/: heat.c  myheat.c
ProbTh/: ht10.tex  ht3.tex  ht4.tex  ht5.tex  ht6.tex  ht7.tex  ht8.tex  ht9.tex
linalg/: HSE lab (SVD).ipynb  HSE lab (SVD)__.ipynb  tst.ipynb
(+291 files in other folders)
